[package]
name = "kewarasan"
version = "0.1.0"
edition = "2021"
description = "Telegram bot mood tracker + web dashboard — emosi itu riak, mood itu arus"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
